problemset model added

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,2 +1,7 @@
-Hello!
-
+<html>
+    <body>
+        <div>
+            <a href="{{ url_for('admin.index') }}">Go to admin!</a>
+        </div>
+    </body>
+</html>
