--- a/templates/security/register_user.html
+++ b/templates/security/register_user.html
@@ -3,9 +3,11 @@
 {% include "security/_messages.html" %}
 {% block body %}
 {{ super() }}
+
 <div class="row-fluid">
     <div class="col-sm-8 col-sm-offset-2">
-        <h1>Register</h1>
+        <h1>Регистрация</h1>
+        <p>Для регистрации, пожалуйста, заполните форму. Укажите свою фамилию (last name) и имя (first name) по-русски.</p>
         <div class="well">
             <form action="{{ url_for_security('register') }}" method="POST" name="register_user_form">
                 {{ register_user_form.hidden_tag() }}
@@ -19,7 +21,7 @@
                 {% endif %}
                 {{ render_field(register_user_form.submit, class="btn btn-primary") }}
             </form>
-            <p>Already signed up? Please <a href="{{ url_for('security.login') }}">log in</a>.</p>
+            <p>Уже зарегистрированы? <a href="{{ url_for('security.login') }}">Залогиньтесь</a>.</p>
         </div>
     </div>
 </div>
