'not a valid time value' fix

--- a/templates/tweak_assignment.html
+++ b/templates/tweak_assignment.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{{ url_for("bower.static",filename="eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css") }}" />
 <script type="text/javascript">
             $(function () {
-                $('.datetimepicker').datetimepicker({format:"YYYY-MM-DD HH:mm:ss Z", sideBySide: true});
+                $('.datetimepicker').datetimepicker({format:"YYYY-MM-DD HH:mm:ss", sideBySide: true});
             });
         </script>
 <div class="row-fluid">
