--- a/templates/list_assignments_ru.html
+++ b/templates/list_assignments_ru.html
@@ -42,7 +42,10 @@
                                 <br/>Проверка не производится: работа сдана после дедлайна. Пожалуйста, обратитесь к преподавателю, если считаете, что работа всё равно должна быть проверена.
                                 {% elif submission.autograded_status == 'sent-to-grading' %}
                                 <br/>Работа ожидает автоматической проверки, но все роботы-проверяльщики заняты. Обновите страницу через некоторое время.
+                                {% elif submission.autograded_status == 'timeout' %}
+                                <br/>ОШИБКА: выполнение занимает слишком много времени, скорее всего где-то есть бесконечный цикл.
                                 {% endif %}
+
                             </li>
                             {% endfor %}
                         </ul>
