--- a/templates/gradebook.html
+++ b/templates/gradebook.html
@@ -21,6 +21,7 @@
                 <td>
                     {{ grades[user.id][assignment.id] }}
                 </td>
+                {% endfor %}
             </tr>
         {% endfor %}
         </table>
