--- a/templates/show_my_grades.html
+++ b/templates/show_my_grades.html
@@ -11,6 +11,7 @@
                 <td> {{ value }}</td>
             </tr>
         </table>
+        {% endfor %}
         {% else %}
         <h2>Sorry, no grades found for email {{ email }}!</h2>
         {% endif %}
