--- a/templates/list_assignments_ru.html
+++ b/templates/list_assignments_ru.html
@@ -63,7 +63,10 @@
         {% endfor %}
         </div>
 </div>
-
+{% if message %}
+<h3>Сообщение</h3>
+<p>{{ message | safe }}</p>
+{% endif %}
 <p>
 <a href="{{ url_for('security.logout') }}">Выйти из системы</a>
     </p>
