--- a/templates/list_assignments_ru.html
+++ b/templates/list_assignments_ru.html
@@ -1,12 +1,10 @@
 {% extends "bootstrap/base.html" %}
-{% block scripts %}
-{{ super() }}
+
+{% block content %}
 <script type=text/javascript>
   $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 </script>
-{% endblock %}
 
-{% block content %}
 <div class="row-fluid">
     <div class="col-sm-8 col-sm-offset-2">
         <h1>Задания</h1>
@@ -65,4 +63,5 @@
 <p>
 <a href="{{ url_for('security.logout') }}">Выйти из системы</a>
     </p>
+<script src="{{ url_for('send_js', 'process_autograded_status.js') }}"></script>
 {% endblock %}
