--- a/templates/list_assignments_ru.html
+++ b/templates/list_assignments_ru.html
@@ -63,5 +63,5 @@
 <p>
 <a href="{{ url_for('security.logout') }}">Выйти из системы</a>
     </p>
-<script src="{{ url_for('send_js', 'process_autograded_status.js') }}"></script>
+<script src="{{ url_for('send_js', path='process_autograded_status.js') }}"></script>
 {% endblock %}
