--- a/templates/list_assignments_ru.html
+++ b/templates/list_assignments_ru.html
@@ -1,5 +1,10 @@
 {% extends "bootstrap/base.html" %}
 
+{% block scripts %}
+{{ super() }}
+<script src="{{ url_for('send_js', path='process_autograded_status.js') }}"></script>
+{% endblock %}
+
 {% block content %}
 <script type=text/javascript>
   $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
@@ -63,5 +68,4 @@
 <p>
 <a href="{{ url_for('security.logout') }}">Выйти из системы</a>
     </p>
-<script src="{{ url_for('send_js', path='process_autograded_status.js') }}"></script>
 {% endblock %}
