--- a/templates/list_assignments.html
+++ b/templates/list_assignments.html
@@ -1,7 +1,7 @@
 {% extends "bootstrap/base.html" %}
 {% block scripts %}
 {{ super() }}
-<script src="{{ url_for('send_js', path='process_autograded_status.js') }}"></script>
+<script src="{{ url_for('send_asset', path='js/process_autograded_status.js') }}"></script>
 {% endblock %}
 
 {% block content %}
