--- a/templates/list_assignments_ru.html
+++ b/templates/list_assignments_ru.html
@@ -45,7 +45,7 @@
                                 </a> ({{ submission.timestamp }})
                                 <br/><span class="process_autograded_status"
                                            data-submission-id="{{ submission.id }}"
-                                           data-sumission-status="{{ submission.autograded_status }}">
+                                           data-autograded-status="{{ submission.autograded_status }}">
                                      </span>
                             </li>
                             {% endfor %}
