deadline handling for peer_review submissions

--- a/templates/list_assignments_ru.html
+++ b/templates/list_assignments_ru.html
@@ -64,7 +64,7 @@
                         Задание для peer review
                     </th>
                     <th>Срок сдачи</th>
-                    <th>Сдать работу</th>
+                    <th>Ваша работа</th>
                 </tr>
 
                 {% for assignment, submission in course['peer_review_assignments'] %}
