--- a/templates/peer_review_submit_review.html
+++ b/templates/peer_review_submit_review.html
@@ -26,6 +26,9 @@
                     <hr>
                 {% endfor %}
 
+                {{ render_field_with_errors(form.comment_for_author) }}
+                {{ render_field_with_errors(form.comment_for_teacher) }}
+
                 <input type="submit" value="Go">
             </form>
         </div>
