--- a/templates/list_assignments_ru.html
+++ b/templates/list_assignments_ru.html
@@ -125,7 +125,7 @@
                         </ul>
                         {%  if free %}
                         <a href="{{ url_for("peer_review_ask_for_new_request",
-                                assignment_id=assignment.id) }}">добавить работу для проверки</a>
+                                assignment_id=assignment.id) }}">хочу проверить ещё одну работу</a>
                         {% endif %}
                     </td>
                 </tr>
