Peer Review with file uploads

--- a/templates/peer_review_submit_assignment.html
+++ b/templates/peer_review_submit_assignment.html
@@ -10,7 +10,8 @@
         <div class="well">
             <form action="{{ url_for('peer_review_submit_assignment', id=assignment.id) }}" method="POST" name="form" enctype="multipart/form-data">
                 {{ form.csrf_token }}
-                {{ render_field_with_errors(form.work) }}
+                {{ render_field_with_errors(form.url) }}
+                {{ render_field_with_errors(form.file) }}
                 {{ render_field_with_errors(form.comment_for_reviewer) }}
 
                 <input type="submit" value="Go">
