--- a/templates/peer_review_get_review.html
+++ b/templates/peer_review_get_review.html
@@ -1,6 +1,8 @@
 {% extends "bootstrap/base.html" %}
 
 {% from "security/_macros.html" import render_field_with_errors, render_field %}
+{% from "macros.html" import render_work_parts %}
+
 {% include "security/_messages.html" %}
 {% block content %}
 <div class="row-fluid">
@@ -11,7 +13,7 @@
         {%- endif %}
         <h2>{{ review.submission.assignment.description }}</h2>
         <h3>Work</h3>
-        <p>{{ review.submission.work}}</p>
+        {{ render_work_parts(review.submission.work_parts()) }}
         {% if review.submission.comment_for_reviewer %}
         <h3>Comment for reviewer</h3>
         <p>{{ review.submission.comment_for_reviewer}}</p>
