--- a/templates/peer_review_submit_assignment.html
+++ b/templates/peer_review_submit_assignment.html
@@ -13,7 +13,7 @@
         {% endif %}
         {% if submission %}
             <h3>Your work</h3>
-        {{  render_work_parts(submission.work_parts() }}
+        {{  render_work_parts(submission.work_parts()) }}
         {% endif %}
         <div class="well">
             <form action="{{ url_for('peer_review_submit_assignment', id=assignment.id) }}" method="POST" name="form" enctype="multipart/form-data">
